[fullscreen] fix(fullscreen.scss): z-index value (wix ad clash) (#1563)

--- a/packages/fullScreen/web/src/fullscreen.rtlignore.scss
+++ b/packages/fullScreen/web/src/fullscreen.rtlignore.scss
@@ -6,7 +6,7 @@
   left: 0;
   width: 100vw;
   height: 100vh;
-  z-index: 1000;
+  z-index: 100001;
   background: white;
   padding-top: 70px;
   padding-left: 7px;
@@ -26,7 +26,7 @@
   left: 0;
   width: 100vw;
   height: 100vh;
-  z-index: 1000;
+  z-index: 100001;
   background: white;
 
   :global(.pro-gallery .ltr), :global(.pro-gallery .rtl) {
